--- a/src/main/webapp/scripts/css/forms.css
+++ b/src/main/webapp/scripts/css/forms.css
@@ -1,6 +1,4 @@
 form input[type=text], [type=password] {
-    padding: 4px;
-    width: 14em;
     font-size: 12pt;
 }
 
